--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-   <h1>测试页面</h1> 
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>建设中...</title><link rel=icon sizes=any mask="" href=./static/img/favicon.png><link href=./static/css/bootstrap-tools.css rel=stylesheet><link href=./static/fontawesome-free-5.3.1-web/css/all.min.css rel=stylesheet><link href=/static/css/app.377575af7483d543c32d24fb41d59c95.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.9c6e26a9037cf5aab93c.js></script><script type=text/javascript src=/static/js/vendor.f8dda3bd97e61ac41bbc.js></script><script type=text/javascript src=/static/js/app.f9cea7ae2efa827eb811.js></script></body></html>
