--- a/source/blog.github/index.html
+++ b/source/blog.github/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>建设中...</title>
+  <title>zxb5102.github.io</title>
   <link rel="icon" sizes="any" mask="" href="./static/img/favicon.png">
   <link href="./static/css/bootstrap-tools.css" rel="stylesheet">
   <link href="./static/fontawesome-free-5.3.1-web/css/all.min.css" rel="stylesheet">
