--- a/source/blog.github/index.html
+++ b/source/blog.github/index.html
@@ -9,6 +9,11 @@
   <link href="./static/css/bootstrap-tools.css" rel="stylesheet">
   <link href="./static/fontawesome-free-5.3.1-web/css/all.min.css" rel="stylesheet">
 </head>
+<style>
+:root{
+  --bgUrl:url('/static/img/home-bg.jpg');
+}
+</style>
 
 <body>
   <div id="app"></div>
