--- a/source/blog.github/index.html
+++ b/source/blog.github/index.html
@@ -7,12 +7,12 @@
   <title>zxb5102.github.io</title>
   <link rel="icon" sizes="any" mask="" href="./static/img/favicon.png">
   <link href="./static/css/bootstrap-tools.css" rel="stylesheet">
-  <link href="./static/fontawesome-free-5.3.1-web/css/all.min.css" rel="stylesheet">
+  <!-- <link href="./static/fontawesome-free-5.3.1-web/css/all.min.css" rel="stylesheet"> -->
 </head>
 <style>
-:root{
-  --bgUrl:url('/static/img/home-bg.jpg');
-}
+  :root {
+    --bgUrl: url('/static/img/home-bg.jpg');
+  }
 </style>
 
 <body>
