--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 </head>
 
 <body>
+    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
+
     <script>
+        function foo() {
+            wx.miniProgram.postMessage({ data: 'foo' })
+        }
+
+        function getEnv() {
+            wx.miniProgram.getEnv(function (res) { console.log(res) })
+        }
     </script>
 
     test-page
+    <div style="padding: 20px;background-color: red; color: #fff;" onclick="foo()">消息传递</div>
+    <div style="padding: 20px;background-color: red; color: #fff;" onclick="getEnv()">获取环境</div>
 </body>
 
 </html>
