--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </script>
 
     test-page
-    <div style="padding: 20px;background-color: red; color: #fff;" onclick="foo()">消息传递</div>
+    <div style="padding: 20px;background-color: red; color: #fff;" onclick="foo()">消息传递v2</div>
     <div style="padding: 20px;background-color: red; color: #fff;" onclick="getEnv()">获取环境</div>
 </body>
 
